# msmtp-retry

./: Cargo.toml  README.md
.github/workflows/: build_releases.yml
src/: main.rs
